[package]
name = "endtoend-encrypted-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
rand = "0.9.2"
x25519-dalek = {version = "2"}
ed25519-dalek = {version = "2.2", features = ["rand_core"]}
sha2 = "0.10"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
